begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|replication
operator|.
name|regionserver
package|;
end_package

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertEquals
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertTrue
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|net
operator|.
name|SocketAddress
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|CompletableFuture
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|atomic
operator|.
name|AtomicBoolean
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|atomic
operator|.
name|AtomicInteger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|conf
operator|.
name|Configuration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|Cell
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|CellBuilder
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|CellBuilderFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|CellBuilderType
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|CellScanner
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|HBaseClassTestRule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|HBaseConfiguration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|Stoppable
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|TableName
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|AdvancedScanResultConsumer
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|AsyncClusterConnection
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|AsyncConnection
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|AsyncTable
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|ClusterConnectionFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|DummyAsyncClusterConnection
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|DummyAsyncTable
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|DummyConnectionRegistry
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|Row
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|security
operator|.
name|User
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|testclassification
operator|.
name|ReplicationTests
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|testclassification
operator|.
name|SmallTests
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|util
operator|.
name|Bytes
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|ClassRule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Rule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|experimental
operator|.
name|categories
operator|.
name|Category
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|rules
operator|.
name|TestName
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hbase
operator|.
name|thirdparty
operator|.
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|ByteString
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|shaded
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|AdminProtos
import|;
end_import

begin_comment
comment|/**  * Simple test of sink-side wal entry filter facility.  */
end_comment

begin_class
annotation|@
name|Category
argument_list|(
block|{
name|ReplicationTests
operator|.
name|class
block|,
name|SmallTests
operator|.
name|class
block|}
argument_list|)
specifier|public
class|class
name|TestWALEntrySinkFilter
block|{
annotation|@
name|ClassRule
specifier|public
specifier|static
specifier|final
name|HBaseClassTestRule
name|CLASS_RULE
init|=
name|HBaseClassTestRule
operator|.
name|forClass
argument_list|(
name|TestWALEntrySinkFilter
operator|.
name|class
argument_list|)
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|TestReplicationSink
operator|.
name|class
argument_list|)
decl_stmt|;
annotation|@
name|Rule
specifier|public
name|TestName
name|name
init|=
operator|new
name|TestName
argument_list|()
decl_stmt|;
specifier|static
specifier|final
name|int
name|BOUNDARY
init|=
literal|5
decl_stmt|;
specifier|static
specifier|final
name|AtomicInteger
name|UNFILTERED
init|=
operator|new
name|AtomicInteger
argument_list|()
decl_stmt|;
specifier|static
specifier|final
name|AtomicInteger
name|FILTERED
init|=
operator|new
name|AtomicInteger
argument_list|()
decl_stmt|;
comment|/**    * Implemetentation of Stoppable to pass into ReplicationSink.    */
specifier|private
specifier|static
name|Stoppable
name|STOPPABLE
init|=
operator|new
name|Stoppable
argument_list|()
block|{
specifier|private
specifier|final
name|AtomicBoolean
name|stop
init|=
operator|new
name|AtomicBoolean
argument_list|(
literal|false
argument_list|)
decl_stmt|;
annotation|@
name|Override
specifier|public
name|boolean
name|isStopped
parameter_list|()
block|{
return|return
name|this
operator|.
name|stop
operator|.
name|get
argument_list|()
return|;
block|}
annotation|@
name|Override
specifier|public
name|void
name|stop
parameter_list|(
name|String
name|why
parameter_list|)
block|{
name|LOG
operator|.
name|info
argument_list|(
literal|"STOPPING BECAUSE: "
operator|+
name|why
argument_list|)
expr_stmt|;
name|this
operator|.
name|stop
operator|.
name|set
argument_list|(
literal|true
argument_list|)
expr_stmt|;
block|}
block|}
decl_stmt|;
comment|/**    * Test filter. Filter will filter out any write time that is<= 5 (BOUNDARY). We count how many    * items we filter out and we count how many cells make it through for distribution way down below    * in the Table#batch implementation. Puts in place a custom DevNullConnection so we can insert    * our counting Table.    * @throws IOException    */
annotation|@
name|Test
specifier|public
name|void
name|testWALEntryFilter
parameter_list|()
throws|throws
name|IOException
block|{
name|Configuration
name|conf
init|=
name|HBaseConfiguration
operator|.
name|create
argument_list|()
decl_stmt|;
comment|// Make it so our filter is instantiated on construction of ReplicationSink.
name|conf
operator|.
name|setClass
argument_list|(
name|DummyConnectionRegistry
operator|.
name|REGISTRY_IMPL_CONF_KEY
argument_list|,
name|DevNullConnectionRegistry
operator|.
name|class
argument_list|,
name|DummyConnectionRegistry
operator|.
name|class
argument_list|)
expr_stmt|;
name|conf
operator|.
name|setClass
argument_list|(
name|WALEntrySinkFilter
operator|.
name|WAL_ENTRY_FILTER_KEY
argument_list|,
name|IfTimeIsGreaterThanBOUNDARYWALEntrySinkFilterImpl
operator|.
name|class
argument_list|,
name|WALEntrySinkFilter
operator|.
name|class
argument_list|)
expr_stmt|;
name|conf
operator|.
name|setClass
argument_list|(
name|ClusterConnectionFactory
operator|.
name|HBASE_SERVER_CLUSTER_CONNECTION_IMPL
argument_list|,
name|DevNullAsyncClusterConnection
operator|.
name|class
argument_list|,
name|AsyncClusterConnection
operator|.
name|class
argument_list|)
expr_stmt|;
name|ReplicationSink
name|sink
init|=
operator|new
name|ReplicationSink
argument_list|(
name|conf
argument_list|,
name|STOPPABLE
argument_list|)
decl_stmt|;
comment|// Create some dumb walentries.
name|List
argument_list|<
name|AdminProtos
operator|.
name|WALEntry
argument_list|>
name|entries
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
name|AdminProtos
operator|.
name|WALEntry
operator|.
name|Builder
name|entryBuilder
init|=
name|AdminProtos
operator|.
name|WALEntry
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
comment|// Need a tablename.
name|ByteString
name|tableName
init|=
name|ByteString
operator|.
name|copyFromUtf8
argument_list|(
name|TableName
operator|.
name|valueOf
argument_list|(
name|this
operator|.
name|name
operator|.
name|getMethodName
argument_list|()
argument_list|)
operator|.
name|toString
argument_list|()
argument_list|)
decl_stmt|;
comment|// Add WALEdit Cells to Cells List. The way edits arrive at the sink is with protos
comment|// describing the edit with all Cells from all edits aggregated in a single CellScanner.
specifier|final
name|List
argument_list|<
name|Cell
argument_list|>
name|cells
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
name|int
name|count
init|=
name|BOUNDARY
operator|*
literal|2
decl_stmt|;
for|for
control|(
name|int
name|i
init|=
literal|0
init|;
name|i
operator|<
name|count
condition|;
name|i
operator|++
control|)
block|{
name|byte
index|[]
name|bytes
init|=
name|Bytes
operator|.
name|toBytes
argument_list|(
name|i
argument_list|)
decl_stmt|;
comment|// Create a wal entry. Everything is set to the current index as bytes or int/long.
name|entryBuilder
operator|.
name|clear
argument_list|()
expr_stmt|;
name|entryBuilder
operator|.
name|setKey
argument_list|(
name|entryBuilder
operator|.
name|getKeyBuilder
argument_list|()
operator|.
name|setLogSequenceNumber
argument_list|(
name|i
argument_list|)
operator|.
name|setEncodedRegionName
argument_list|(
name|ByteString
operator|.
name|copyFrom
argument_list|(
name|bytes
argument_list|)
argument_list|)
operator|.
name|setWriteTime
argument_list|(
name|i
argument_list|)
operator|.
name|setTableName
argument_list|(
name|tableName
argument_list|)
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
comment|// Lets have one Cell associated with each WALEdit.
name|entryBuilder
operator|.
name|setAssociatedCellCount
argument_list|(
literal|1
argument_list|)
expr_stmt|;
name|entries
operator|.
name|add
argument_list|(
name|entryBuilder
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
comment|// We need to add a Cell per WALEdit to the cells array.
name|CellBuilder
name|cellBuilder
init|=
name|CellBuilderFactory
operator|.
name|create
argument_list|(
name|CellBuilderType
operator|.
name|DEEP_COPY
argument_list|)
decl_stmt|;
comment|// Make cells whose row, family, cell, value, and ts are == 'i'.
name|Cell
name|cell
init|=
name|cellBuilder
operator|.
name|setRow
argument_list|(
name|bytes
argument_list|)
operator|.
name|setFamily
argument_list|(
name|bytes
argument_list|)
operator|.
name|setQualifier
argument_list|(
name|bytes
argument_list|)
operator|.
name|setType
argument_list|(
name|Cell
operator|.
name|Type
operator|.
name|Put
argument_list|)
operator|.
name|setTimestamp
argument_list|(
name|i
argument_list|)
operator|.
name|setValue
argument_list|(
name|bytes
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|cells
operator|.
name|add
argument_list|(
name|cell
argument_list|)
expr_stmt|;
block|}
comment|// Now wrap our cells array in a CellScanner that we can pass in to replicateEntries. It has
comment|// all Cells from all the WALEntries made above.
name|CellScanner
name|cellScanner
init|=
operator|new
name|CellScanner
argument_list|()
block|{
comment|// Set to -1 because advance gets called before current.
name|int
name|index
init|=
operator|-
literal|1
decl_stmt|;
annotation|@
name|Override
specifier|public
name|Cell
name|current
parameter_list|()
block|{
return|return
name|cells
operator|.
name|get
argument_list|(
name|index
argument_list|)
return|;
block|}
annotation|@
name|Override
specifier|public
name|boolean
name|advance
parameter_list|()
throws|throws
name|IOException
block|{
name|index
operator|++
expr_stmt|;
return|return
name|index
operator|<
name|cells
operator|.
name|size
argument_list|()
return|;
block|}
block|}
decl_stmt|;
comment|// Call our sink.
name|sink
operator|.
name|replicateEntries
argument_list|(
name|entries
argument_list|,
name|cellScanner
argument_list|,
literal|null
argument_list|,
literal|null
argument_list|,
literal|null
argument_list|)
expr_stmt|;
comment|// Check what made it through and what was filtered.
name|assertTrue
argument_list|(
name|FILTERED
operator|.
name|get
argument_list|()
operator|>
literal|0
argument_list|)
expr_stmt|;
name|assertTrue
argument_list|(
name|UNFILTERED
operator|.
name|get
argument_list|()
operator|>
literal|0
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|count
argument_list|,
name|FILTERED
operator|.
name|get
argument_list|()
operator|+
name|UNFILTERED
operator|.
name|get
argument_list|()
argument_list|)
expr_stmt|;
block|}
comment|/**    * Simple filter that will filter out any entry wholse writeTime is<= 5.    */
specifier|public
specifier|static
class|class
name|IfTimeIsGreaterThanBOUNDARYWALEntrySinkFilterImpl
implements|implements
name|WALEntrySinkFilter
block|{
specifier|public
name|IfTimeIsGreaterThanBOUNDARYWALEntrySinkFilterImpl
parameter_list|()
block|{     }
annotation|@
name|Override
specifier|public
name|void
name|init
parameter_list|(
name|AsyncConnection
name|conn
parameter_list|)
block|{
comment|// Do nothing.
block|}
annotation|@
name|Override
specifier|public
name|boolean
name|filter
parameter_list|(
name|TableName
name|table
parameter_list|,
name|long
name|writeTime
parameter_list|)
block|{
name|boolean
name|b
init|=
name|writeTime
operator|<=
name|BOUNDARY
decl_stmt|;
if|if
condition|(
name|b
condition|)
block|{
name|FILTERED
operator|.
name|incrementAndGet
argument_list|()
expr_stmt|;
block|}
return|return
name|b
return|;
block|}
block|}
specifier|public
specifier|static
class|class
name|DevNullConnectionRegistry
extends|extends
name|DummyConnectionRegistry
block|{
specifier|public
name|DevNullConnectionRegistry
parameter_list|(
name|Configuration
name|conf
parameter_list|)
block|{     }
annotation|@
name|Override
specifier|public
name|CompletableFuture
argument_list|<
name|String
argument_list|>
name|getClusterId
parameter_list|()
block|{
return|return
name|CompletableFuture
operator|.
name|completedFuture
argument_list|(
literal|"test"
argument_list|)
return|;
block|}
block|}
specifier|public
specifier|static
class|class
name|DevNullAsyncClusterConnection
extends|extends
name|DummyAsyncClusterConnection
block|{
specifier|private
specifier|final
name|Configuration
name|conf
decl_stmt|;
specifier|public
name|DevNullAsyncClusterConnection
parameter_list|(
name|Configuration
name|conf
parameter_list|,
name|Object
name|registry
parameter_list|,
name|String
name|clusterId
parameter_list|,
name|SocketAddress
name|localAddress
parameter_list|,
name|User
name|user
parameter_list|)
block|{
name|this
operator|.
name|conf
operator|=
name|conf
expr_stmt|;
block|}
annotation|@
name|Override
specifier|public
name|AsyncTable
argument_list|<
name|AdvancedScanResultConsumer
argument_list|>
name|getTable
parameter_list|(
name|TableName
name|tableName
parameter_list|)
block|{
return|return
operator|new
name|DummyAsyncTable
argument_list|<
name|AdvancedScanResultConsumer
argument_list|>
argument_list|()
block|{
annotation|@
name|Override
specifier|public
parameter_list|<
name|T
parameter_list|>
name|CompletableFuture
argument_list|<
name|List
argument_list|<
name|T
argument_list|>
argument_list|>
name|batchAll
parameter_list|(
name|List
argument_list|<
name|?
extends|extends
name|Row
argument_list|>
name|actions
parameter_list|)
block|{
name|List
argument_list|<
name|T
argument_list|>
name|list
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|(
name|actions
operator|.
name|size
argument_list|()
argument_list|)
decl_stmt|;
for|for
control|(
name|Row
name|action
range|:
name|actions
control|)
block|{
comment|// Row is the index of the loop above where we make WALEntry and Cells.
name|int
name|row
init|=
name|Bytes
operator|.
name|toInt
argument_list|(
name|action
operator|.
name|getRow
argument_list|()
argument_list|)
decl_stmt|;
name|assertTrue
argument_list|(
literal|""
operator|+
name|row
argument_list|,
name|row
operator|>
name|BOUNDARY
argument_list|)
expr_stmt|;
name|UNFILTERED
operator|.
name|incrementAndGet
argument_list|()
expr_stmt|;
name|list
operator|.
name|add
argument_list|(
literal|null
argument_list|)
expr_stmt|;
block|}
return|return
name|CompletableFuture
operator|.
name|completedFuture
argument_list|(
name|list
argument_list|)
return|;
block|}
block|}
return|;
block|}
annotation|@
name|Override
specifier|public
name|Configuration
name|getConfiguration
parameter_list|()
block|{
return|return
name|conf
return|;
block|}
block|}
block|}
end_class

end_unit

